tests/reject/variableScopeCondIf.emojic
🏁 🍇
  🍰 qo 🍬🔡
  🍊 🍦 q qo 🍇
    😀 q
  🍉
  😀 q
🍉
